--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
               <button class="navbar-toggler mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                <img src="imagenes/images.jpeg" class="img-fluid img-logo" alt="">
+              <div class="collapse navbar-collapse navbarlogo" id="navbarTogglerDemo01">
+                <div class="imagen-logo">
+                <img src="imagenes/images.jpeg" class=" img-logo" alt="">
+              </div>
                 <ul class="navbar-nav navbar4 container-fluid p-0">
                   <li class="nav-item">
                     <a class="nav-link active py-1" aria-current="page" href="#">HOME</a>
