imagenes de fonde ok

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </div>
               </div>
             </div>
-            <button class="btn btn-primary boton-modal texto-login fw-bold" data-bs-target="#exampleModalToggle1" data-bs-toggle="modal">LOGIN</button>
+            <button class=" boton-modal texto-login fw-bold" data-bs-target="#exampleModalToggle1" data-bs-toggle="modal">LOGIN</button>
             
 
             <div class="modal fade" id="exampleModalToggle3" aria-hidden="true" aria-labelledby="exampleModalToggleLabel3" tabindex="-1">
@@ -199,11 +199,18 @@
                 </div>
               </div>
             </div>
-            <button class="btn btn-primary boton-modal texto-login fw-bold" data-bs-target="#exampleModalToggle3" data-bs-toggle="modal">REGISTRATE</button>
+            <button class=" boton-modal texto-login fw-bold" data-bs-target="#exampleModalToggle3" data-bs-toggle="modal">REGISTRATE</button>
           </div>
         </nav>
 
-        <header>
+        <header class="">
+          <div class="header1 text-center">
+            <h1 class="titulo1">NANI ESTETICA</h1>
+            <H2 class="titulo2 m-0">TRATAMIENTOS FACIALES CON RESULTADOS REALES Y COMPROBABLES</H2>
+          </div>
+          <div class="header2 w-100">
+          <img class="imagen-fondo m-0 w-100" src="./imagenes/istockphoto-968940310-1024x1024.jpg" alt="">
+        </div>
 
         </header>
             
