--- a/index.html
+++ b/index.html
@@ -55,29 +55,29 @@
               <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalToggleLabel1">Login</h1>
+                    <h1 class="modal-title fs-5 texto-interno text-center" id="exampleModalToggleLabel1">INICIAR SESION</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
                   <div class="modal-body">
                     <form action="">
                       <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label">Email</label>
+                        <label for="exampleFormControlInput1" class="form-label">EMAIL</label>
                         <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
                       </div>
                       <div class="mb-3">
-                        <label for="exampleFormControlInput2" class="form-label">Contraseña</label>
+                        <label for="exampleFormControlInput2" class="form-label">CONTRASEÑA</label>
                         <input type="password" class="form-control" id="exampleFormControlInput2" placeholder="">
                       </div>
                     </form>
                     <div class="botones-formulario text-center">
-                    <button class="btn btn-primary">Enviar</button>
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" aria-label="Close">Cerrar</button>
+                    <button class="btn btn-primary boton-interno">ENVIAR</button>
+                    <button type="button" class="btn btn-primary boton-interno" data-bs-dismiss="modal" aria-label="Close">CERRAR</button>
                    </div>
 
                   </div>
                   <div class="modal-footer d-flex justify-content-center">
                     ¿No estas registrado?
-                    <button class="btn btn-primary" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Registrarse</button>
+                    <button class="btn btn-primary boton-interno" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">REGISTRATE</button>
                     <div class="recuperar-contraseña">
                     ¿Olvidaste la contraseña?
                     <a href="" class="text-decoration-none">Cambiar contraseña</a>
@@ -90,32 +90,32 @@
               <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalToggleLabel2">Registrase</h1>
+                    <h1 class="modal-title fs-5 texto-interno" id="exampleModalToggleLabel2">REGISTRARSE</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
                   <div class="modal-body">
                    <form action="">
                     <div class="mb-3">
-                      <label for="exampleFormControlInput3" class="form-label">Email</label>
+                      <label for="exampleFormControlInput3" class="form-label texto-label">EMAIL</label>
                       <input type="email" class="form-control" id="exampleFormControlInput3" placeholder="name@example.com">
                     </div>
                     <div class="mb-3">
-                      <label for="exampleFormControlInput4" class="form-label">Contraseña</label>
+                      <label for="exampleFormControlInput4" class="form-label texto-label">CONTRASEÑA</label>
                       <input type="password" class="form-control" id="exampleFormControlInput4" placeholder="">
                     </div>
                     <div class="mb-3">
-                      <label for="exampleFormControlInput5" class="form-label">Repetir Contraseña</label>
+                      <label for="exampleFormControlInput5" class="form-label texto-label">REPETIR CONTRASEÑA</label>
                       <input type="password" class="form-control" id="exampleFormControlInput5" placeholder="">
                     </div>
                     <div class="botones-formulario text-center">
-                    <button class="btn btn-primary">Enviar</button>
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" aria-label="Close">Cerrar</button>
+                    <button class="btn btn-primary boton-interno">ENVIAR</button>
+                    <button type="button" class="btn btn-primary boton-interno" data-bs-dismiss="modal" aria-label="Close">CERRAR</button>
                     </div>
                    </form>
                   </div>
                   <div class="modal-footer d-flex justify-content-center">
                     <p>¿Ya estas registrado?</p>
-                    <button class="btn btn-primary" data-bs-target="#exampleModalToggle1" data-bs-toggle="modal">Login</button>
+                    <button class="btn btn-primary boton-interno" data-bs-target="#exampleModalToggle1" data-bs-toggle="modal">LOGIN</button>
                     <div class="recuperar-contraseña">
                       ¿Olvidaste la contraseña?
                       <a href="" class="text-decoration-none">Cambiar contraseña</a>
@@ -131,32 +131,32 @@
               <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalToggleLabel3">Registrarse</h1>
+                    <h1 class="modal-title fs-5 texto-interno" id="exampleModalToggleLabel3">REGISTRARSE</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
                   <div class="modal-body">
                     <form action="">
                       <div class="mb-3">
-                        <label for="exampleFormControlInput6" class="form-label">Email address</label>
+                        <label for="exampleFormControlInput6 texto-label" class="form-label">EMAIL</label>
                         <input type="email" class="form-control" id="exampleFormControlInput6" placeholder="name@example.com">
                       </div>
                       <div class="mb-3">
-                        <label for="exampleFormControlInput7" class="form-label">Contraseña</label>
+                        <label for="exampleFormControlInput7" class="form-label texto-label">CONTRASEÑA</label>
                         <input type="password" class="form-control" id="exampleFormControlInput7" placeholder="">
                       </div>
                       <div class="mb-3">
-                        <label for="exampleFormControlInput8" class="form-label">Repetir Contraseña</label>
+                        <label for="exampleFormControlInput8" class="form-label texto-label">REPETIR CONTRASEÑA</label>
                         <input type="password" class="form-control" id="exampleFormControlInput8" placeholder="">
                       </div>
                       <div class="botones-formulario text-center">
-                        <button class="btn btn-primary">Enviar</button>
-                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" aria-label="Close">Cerrar</button>
+                        <button class="btn btn-primary boton-interno">ENVIAR</button>
+                        <button type="button" class="btn btn-primary boton-interno" data-bs-dismiss="modal" aria-label="Close">CERRAR</button>
                       </div>
                     </form>
                   </div>
                   <div class="modal-footer d-flex justify-content-center">
                     ¿Ya estas registrado?
-                    <button class="btn btn-primary" data-bs-target="#exampleModalToggle4" data-bs-toggle="modal">Login</button>
+                    <button class="btn btn-primary boton-interno" data-bs-target="#exampleModalToggle4" data-bs-toggle="modal">LOGIN</button>
                     <div class="recuperar-contraseña">
                       ¿Olvidaste la contraseña?
                       <a href="" class="text-decoration-none">Cambiar contraseña</a>
@@ -169,28 +169,28 @@
               <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalToggleLabel4">Login</h1>
+                    <h1 class="modal-title fs-5 texto-interno" id="exampleModalToggleLabel4">INICIAR SESION</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
                   <div class="modal-body">
                     <form action="">
                       <div class="mb-3">
-                        <label for="exampleFormControlInput9" class="form-label">Email</label>
+                        <label for="exampleFormControlInput9" class="form-label texto-label">EMAIL</label>
                         <input type="email" class="form-control" id="exampleFormControlInput9" placeholder="name@example.com">
                       </div>
                       <div class="mb-3">
-                        <label for="exampleFormControlInput10" class="form-label">Contraseña</label>
+                        <label for="exampleFormControlInput10" class="form-label texto-label">CONTRASEÑA</label>
                         <input type="password" class="form-control" id="exampleFormControlInput10" placeholder="">
                       </div>
                       <div class="botones-formulario text-center">
-                        <button class="btn btn-primary">Enviar</button>
-                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" aria-label="Close">Cerrar</button>
+                        <button class="btn btn-primary boton-interno">ENVIAR</button>
+                        <button type="button" class="btn btn-primary boton-interno" data-bs-dismiss="modal" aria-label="Close">CERRAR</button>
                       </div>
                   </form>
                   </div>
                   <div class="modal-footer d-flex justify-content-center">
                     ¿No estas registrado?
-                    <button class="btn btn-primary" data-bs-target="#exampleModalToggle3" data-bs-toggle="modal">Registrase</button>
+                    <button class="btn btn-primary boton-interno" data-bs-target="#exampleModalToggle3" data-bs-toggle="modal">REGISTRATE</button>
                     <div class="recuperar-contraseña">
                       ¿Olvidaste la contraseña?
                       <a href="" class="text-decoration-none">Cambiar contraseña</a>
