footer casi listo

--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
 
 <body class="container-fluid p-0">
     
-    <nav class="container-fluid row p-0 m-0">
+    <nav class="container-fluid row p-0 m-0 navprincipal">
       <div class="redessociales d-flex justify-content-end">
       <p class="tituloredes">SIGUENOS EN NUESTRAS REDES: &nbsp</p>
+      <div class="iconos3">
       <div><a href="#"><img class="iconos" src="./imagenes/icons8-instagram-48.png" alt=""></a></div>
+      <div><a href="#"><img class="iconos" src="./imagenes/icons8-tik-tok-48.png" alt=""></a></div>
       <div><a href="#"><img class="iconos" src="./imagenes/icons8-facebook-48.png" alt=""></a></div>
       <div><a href="#"><img class="iconos" src="./imagenes/icons8-youtube-play-48.png" alt=""></a></div>
+    </div>
     </div>
       <nav class="navbar navbar1 navbar-expand-md col-6 col-sm-8">
             <div class="container-fluid navbar2">
@@ -224,7 +227,63 @@
 <p>AQUI VA EL MAIN</p>
    </main>
 
-   <footer></footer>
+   <footer class="d-flex row py-3">
+  
+    <div class="divfooter col-lg-4">
+      <p class="mb-5">CONTACTOS</p>
+      <div class="mb-4">
+        <p class="mb-0 text-center"><img class="iconos" src="./imagenes/icons8-gps-50.png" alt="">Pablo Podesta 451, B1625 Belén de Escobar</p>
+        <p class="text-center mt-0">Provincia de Buenos Aires</p>
+      </div>
+      <div class="mb-4 text-center">
+        <p><img class="iconos" src="./imagenes/icons8-nokia-3310-48.png" alt="">+54 (11)1111-1111</p>
+      </div>
+      <div class="mb-4 text-center">
+        <p><img class="iconos" src="./imagenes/icons8-whatsapp-48.png" alt="">+54 (11)1111-1111</p>
+      </div>
+      <div class="text-center iconos3 mt-5 pb-4">
+        <div>
+        <a class="link" href="#"><img class=" iconos2" src="./imagenes/icons8-instagram-48.png" alt=""></a>
+      </div>
+      <div>
+        <a class="link" href="#"><img class=" iconos2" src="./imagenes/icons8-tik-tok-48.png" alt=""></a>
+      </div>
+      <div>
+        <a class="link" href="#"> <img class=" iconos2" src="./imagenes/icons8-facebook-48.png" alt=""></a>
+      </div>
+      <div>
+        <a class="link" href="#"><img class=" iconos2" src="./imagenes/icons8-youtube-play-48.png" alt=""></a>
+      </div>
+      </div>
+    </div>
+
+    <div class="divfooter col-lg-4">
+      <p>ENVIANOS TUS COMENTARIOS</p>
+      <div class="mb-3">
+        <label for="exampleFormControlInput21" class="form-label fs-6">NOMBRE</label>
+        <input type="text" class="form-control" id="exampleFormControlInput21" placeholder="Nombre completo">
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlInput22" class="form-label fs-6">TELEFONO</label>
+        <input type="number" class="form-control" id="exampleFormControlInput22" placeholder="11 - 1111 - 1111">
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlInput23" class="form-label fs-6">EMAIL</label>
+        <input type="email" class="form-control" id="exampleFormControlInput23" placeholder="name@example.com">
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlTextarea24" class="form-label fs-6">COMENTARIO</label>
+        <textarea class="form-control" id="exampleFormControlTextarea24" rows="3"></textarea>
+      </div>
+    </div>
+          
+
+    <div class="divfooter col-lg-4">
+      <iframe class="w-100 rounded rounded-2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4400.61749400772!2d-58.79359358225364!3d-34.353920874961496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bb61b6066f6bc1%3A0xdc195365f6a5a98d!2sPablo%20Podesta%20451%2C%20B1625%20Bel%C3%A9n%20de%20Escobar%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1697767903353!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </div>
+   
+   </footer>
 
 
 
