finalizado boton flotante ws y actualizacion header

--- a/index.html
+++ b/index.html
@@ -216,18 +216,31 @@
           </div>
         </nav>
 
-        <header class="">
-          <div class="header1 text-center">
-            <h1 class="titulo1">NANI ESTETICA</h1>
-            <H2 class="titulo2 m-0">TRATAMIENTOS FACIALES CON RESULTADOS REALES Y COMPROBABLES</H2>
+        <header class="header1">
+
+          <div class="contenido-header">
+          <div class="header-flex">
+              <div class="img-fondo-header">
+            <img class="img-header-banner img-fluid" src="./imagenes/images.jpeg" alt="">
           </div>
-          <div class="header2 w-100">
-          <img class="imagen-fondo m-0 w-100" src="./imagenes/istockphoto-968940310-1024x1024.jpg" alt="">
+          <div class="titulo1">
+            <h1 class=" h1estetica">NANI ESTETICA</h1>
+          </div>
+          </div>
         </div>
+        <div>
+        <H2 class="titulo2 m-0">TRATAMIENTOS FACIALES CON RESULTADOS REALES</H2>
+      </div>
+      
       </header>
 
    <main class="">
 
+    <h3 class="text-center pt-3">Beneficios  De Los Tratamiento Faciales</h3>
+
+    <p class="text-center fs-5 px-5 py-3 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur a facere dolor reiciendis qui, minus amet ab facilis architecto natus officiis laudantium assumenda ut, ullam debitis, aspernatur sint dolore atque?
+    Consectetur repudiandae, dolore dolores quidem officiis ipsum deserunt asperiores debitis perspiciatis, labore cum. Non quam voluptatum aliquam aspernatur distinctio! Necessitatibus hic doloremque, ex id aspernatur amet excepturi natus. Hic, neque.
+  </p>
 
    </main>
 
