tajetas del main y actualizacion de los iconos de contacto del footer

--- a/index.html
+++ b/index.html
@@ -236,12 +236,76 @@
 
    <main class="">
 
-    <h3 class="text-center pt-3">Beneficios  De Los Tratamiento Faciales</h3>
+    <h3 class="text-center pt-3">BENEFICIOS DE LOS TRATAMIENTOS FACIALES</h3>
 
     <p class="text-center fs-5 px-5 py-3 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur a facere dolor reiciendis qui, minus amet ab facilis architecto natus officiis laudantium assumenda ut, ullam debitis, aspernatur sint dolore atque?
     Consectetur repudiandae, dolore dolores quidem officiis ipsum deserunt asperiores debitis perspiciatis, labore cum. Non quam voluptatum aliquam aspernatur distinctio! Necessitatibus hic doloremque, ex id aspernatur amet excepturi natus. Hic, neque.
   </p>
 
+  <div class="p-1 mb-5">
+  <div class="card mb-3 tarjeta1 border border-0" style="max-width: 750px;">
+    <div class="row g-0">
+      <div class="col-sm-4 d-flex  align-items-center">
+        <img src="./imagenes/istockphoto-968940310-1024x1024.jpg" class="img-fluid img-cartas rounded rounded-1" alt="...">
+      </div>
+      <div class="col-sm-8">
+        <div class="card-body">
+          <h5 class="card-title text-center">Card title</h5>
+          <p class="card-text">facere dolor reiciendis qui, minus amet ab facilis architecto natus officiis laudantium assumenda ut, ullam debitis, aspernatur sint dolore atque?
+            Consectetur repudiandae, dolore dolores quidem officiis ipsum deserunt asperiores debitis perspiciatis, labore cum. Non quam voluptatum aliquam aspernatur distinctio! Necessitatibus hic doloremque, ex id aspernatur amet excepturi natus. Hic, neque.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="card mb-3 tarjeta2 border border-0" style="max-width: 750px;">
+    <div class="row g-0">
+      <div class="col-sm-8">
+        <div class="card-body">
+          <h5 class="card-title text-center">Card title</h5>
+          <p class="card-text">facere dolor reiciendis qui, minus amet ab facilis architecto natus officiis laudantium assumenda ut, ullam debitis, aspernatur sint dolore atque?
+            Consectetur repudiandae, dolore dolores quidem officiis ipsum deserunt asperiores debitis perspiciatis, labore cum. Non quam voluptatum aliquam aspernatur distinctio! Necessitatibus hic doloremque, ex id aspernatur amet excepturi natus. Hic, neque.</p>
+        </div>
+      </div>
+      <div class="col-sm-4 d-flex  align-items-center">
+        <img src="./imagenes/istockphoto-968940310-1024x1024.jpg" class="img-fluid img-cartas rounded rounded-1" alt="...">
+      </div>
+    </div>
+  </div>
+
+  <div class="card mb-3 tarjeta1 border border-0" style="max-width: 750px;">
+    <div class="row g-0">
+      <div class="col-sm-4 d-flex  align-items-center">
+        <img src="./imagenes/istockphoto-968940310-1024x1024.jpg" class="img-fluid img-cartas rounded rounded-1" alt="...">
+      </div>
+      <div class="col-sm-8">
+        <div class="card-body">
+          <h5 class="card-title text-center">Card title</h5>
+          <p class="card-text">facere dolor reiciendis qui, minus amet ab facilis architecto natus officiis laudantium assumenda ut, ullam debitis, aspernatur sint dolore atque?
+            Consectetur repudiandae, dolore dolores quidem officiis ipsum deserunt asperiores debitis perspiciatis, labore cum. Non quam voluptatum aliquam aspernatur distinctio! Necessitatibus hic doloremque, ex id aspernatur amet excepturi natus. Hic, neque.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="card mb-3 tarjeta2 border border-0" style="max-width: 750px;">
+    <div class="row g-0">
+      <div class="col-sm-8">
+        <div class="card-body">
+          <h5 class="card-title text-center">Card title</h5>
+          <p class="card-text">facere dolor reiciendis qui, minus amet ab facilis architecto natus officiis laudantium assumenda ut, ullam debitis, aspernatur sint dolore atque?
+            Consectetur repudiandae, dolore dolores quidem officiis ipsum deserunt asperiores debitis perspiciatis, labore cum. Non quam voluptatum aliquam aspernatur distinctio! Necessitatibus hic doloremque, ex id aspernatur amet excepturi natus. Hic, neque.</p>
+        </div>
+      </div>
+      <div class="col-sm-4 d-flex  align-items-center">
+        <img src="./imagenes/istockphoto-968940310-1024x1024.jpg" class="img-fluid img-cartas rounded rounded-1" alt="...">
+      </div>
+    </div>
+  </div>
+</div>
+
+<h3 class="text-center">TRATAMIENTOS</h3>
+<p class="px-5 py-3 mb-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident sed obcaecati laborum sit soluta dolor laboriosam aliquam, beatae cupiditate in adipisci ipsum dicta nisi perferendis velit aut commodi fuga repudiandae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptatibus consectetur voluptatem soluta nobis asperiores quasi laudantium voluptate dolore accusantium vitae itaque distinctio, repudiandae tenetur quis animi optio ipsa? Numquam!</p>
    </main>
 
    <footer class="d-flex row py-3">
@@ -253,10 +317,13 @@
         <p class="text-center mt-0">Provincia de Buenos Aires</p>
       </div>
       <div class="mb-4 text-center">
-        <p><img class="iconos" src="./imagenes/icons8-nokia-3310-48.png" alt="">+54 (11)1111-1111</p>
+        <p><img class="iconos" src="./imagenes/icons8-teléfono-celular-50.png" alt="">+54 (11)1111-1111</p>
       </div>
       <div class="mb-4 text-center">
-        <p><img class="iconos" src="./imagenes/icons8-whatsapp-48.png" alt="">+54 (11)1111-1111</p>
+        <p><img class="iconos" src="./imagenes/icons8-whatsapp-50negro.png" alt="">+54 (11)1111-1111</p>
+      </div>
+      <div class="mb-4 text-center">
+        <p class=""><img class="iconos pe-1" src="./imagenes/icons8-correo-50.png" alt="">estoesunaprueba@gmail.com</p>
       </div>
       <div class="text-center iconos3 mt-5 pb-4">
         <div>
