actualizacion footer, agregado de img fijas y agregado de recuadros de imagenes al main

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <div class="redessociales d-flex justify-content-end">
       <p class="tituloredes">SIGUENOS EN NUESTRAS REDES: &nbsp</p>
       <div class="iconos3">
-      <div><a href="#"><img class="iconos" src="./imagenes/icons8-instagram-48.png" alt=""></a></div>
-      <div><a href="#"><img class="iconos" src="./imagenes/icons8-tik-tok-48.png" alt=""></a></div>
-      <div><a href="#"><img class="iconos" src="./imagenes/icons8-facebook-48.png" alt=""></a></div>
-      <div><a href="#"><img class="iconos" src="./imagenes/icons8-youtube-play-48.png" alt=""></a></div>
+      <div class="ms-2"><a href="#"><img class="iconos" src="./imagenes/icons8-instagram-50 black.png" alt=""></a></div>
+      <div class="ms-2"><a href="#"><img class="iconos" src="./imagenes/icons8-tik-tok-50 black.png" alt=""></a></div>
+      <div class="ms-2"><a href="#"><img class="iconos" src="./imagenes/icons8-facebook-50 black.png" alt=""></a></div>
+      <div class="ms-2"><a href="#"><img class="iconos" src="./imagenes/icons8-youtube-play-50 black.png" alt=""></a></div>
     </div>
     </div>
       <nav class="navbar navbar1 navbar-expand-md col-6 col-sm-8">
@@ -236,11 +236,12 @@
 
    <main class="">
 
-    <h3 class="text-center pt-3">BENEFICIOS DE LOS TRATAMIENTOS FACIALES</h3>
-
-    <p class="text-center fs-5 px-5 py-3 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur a facere dolor reiciendis qui, minus amet ab facilis architecto natus officiis laudantium assumenda ut, ullam debitis, aspernatur sint dolore atque?
-    Consectetur repudiandae, dolore dolores quidem officiis ipsum deserunt asperiores debitis perspiciatis, labore cum. Non quam voluptatum aliquam aspernatur distinctio! Necessitatibus hic doloremque, ex id aspernatur amet excepturi natus. Hic, neque.
-  </p>
+    <div class="imagen-fija-fondo">
+      <h3 class="text-center pt-3">BENEFICIOS DE LOS TRATAMIENTOS FACIALES</h3>
+      <p class="text-center px-5 py-3 texto-img-fijas">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur a facere dolor reiciendis qui, minus amet ab facilis architecto natus officiis laudantium assumenda ut, ullam debitis, aspernatur sint dolore atque?
+        Consectetur repudiandae, dolore dolores quidem officiis ipsum deserunt asperiores debitis perspiciatis, labore cum. Non quam voluptatum aliquam aspernatur distinctio! Necessitatibus hic doloremque, ex id aspernatur amet excepturi natus. Hic, neque.
+      </p>
+    </div>
 
   <div class="p-1 mb-5">
   <div class="card mb-3 tarjeta1 border border-0" style="max-width: 750px;">
@@ -304,14 +305,60 @@
   </div>
 </div>
 
-<h3 class="text-center">TRATAMIENTOS</h3>
-<p class="px-5 py-3 mb-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident sed obcaecati laborum sit soluta dolor laboriosam aliquam, beatae cupiditate in adipisci ipsum dicta nisi perferendis velit aut commodi fuga repudiandae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptatibus consectetur voluptatem soluta nobis asperiores quasi laudantium voluptate dolore accusantium vitae itaque distinctio, repudiandae tenetur quis animi optio ipsa? Numquam!</p>
+<div class="imagen-fija-fondo">
+  <h3 class="text-center">TRATAMIENTOS</h3>
+  <p class="px-5 py-3 mb-0 texto-img-fijas">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident sed obcaecati laborum sit soluta dolor laboriosam aliquam, beatae cupiditate in adipisci ipsum dicta nisi perferendis velit aut commodi fuga repudiandae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptatibus consectetur voluptatem soluta nobis asperiores quasi laudantium voluptate dolore accusantium vitae itaque distinctio, repudiandae tenetur quis animi optio ipsa? Numquam!</p>
+</div>
+
+<div class="imagenes-main py-3">
+
+  <div class="row text-center mx-0">
+    <div class="col-lg-4">
+      <a href=""><img class="img-fluid img-main" src="./imagenes/istockphoto-968940310-1024x1024.jpg" alt=""></a>
+    </div>
+    <div class="col-lg-4">
+      <a href=""><img class="img-fluid img-main" src="./imagenes/istockphoto-968940310-1024x1024.jpg" alt=""></a>
+    </div>
+    <div class="col-lg-4">
+      <a href=""><img class="img-fluid img-main" src="./imagenes/istockphoto-968940310-1024x1024.jpg" alt=""></a>
+    </div>
+  </div>
+
+  <div class="row text-center mx-0">
+    <div class="col-lg-4">
+      <a href=""><img class="img-fluid img-main" src="./imagenes/istockphoto-968940310-1024x1024.jpg" alt=""></a>
+    </div>
+    <div class="col-lg-4">
+      <a href=""><img class="img-fluid img-main" src="./imagenes/istockphoto-968940310-1024x1024.jpg" alt=""></a>
+    </div>
+    <div class="col-lg-4">
+      <a href=""><img class="img-fluid img-main" src="./imagenes/istockphoto-968940310-1024x1024.jpg" alt=""></a>
+    </div>
+  </div>
+
+  <div class="row text-center mx-0">
+    <div class="col-lg-4">
+      <a href=""><img class="img-fluid img-main" src="./imagenes/istockphoto-968940310-1024x1024.jpg" alt=""></a>
+    </div>
+    <div class="col-lg-4">
+      <a href=""><img class="img-fluid img-main" src="./imagenes/istockphoto-968940310-1024x1024.jpg" alt=""></a>
+    </div>
+    <div class="col-lg-4">
+      <a href=""><img class="img-fluid img-main" src="./imagenes/istockphoto-968940310-1024x1024.jpg" alt=""></a>
+    </div>
+  </div>
+
+</div>
+
+
+
+
    </main>
 
    <footer class="d-flex row py-3">
   
     <div class="divfooter col-lg-4">
-      <p class="mb-5 text-center">CONTACTOS</p>
+      <p class="mb-3 text-center titulos-footer">CONTACTOS</p>
       <div class="mb-4">
         <p class="mb-0 text-center"><img class="iconos" src="./imagenes/icons8-gps-50.png" alt="">Pablo Podesta 451, B1625 Belén de Escobar</p>
         <p class="text-center mt-0">Provincia de Buenos Aires</p>
@@ -326,23 +373,23 @@
         <p class=""><img class="iconos pe-1" src="./imagenes/icons8-correo-50.png" alt="">estoesunaprueba@gmail.com</p>
       </div>
       <div class="text-center iconos3 mt-5 pb-4">
-        <div>
-        <a class="link" href="#"><img class=" iconos2" src="./imagenes/icons8-instagram-48.png" alt=""></a>
+        <div class="">
+        <a class="link" href="#"><img class=" iconos2" src="./imagenes/icons8-instagram-50 black.png" alt=""></a>
       </div>
       <div>
-        <a class="link" href="#"><img class=" iconos2" src="./imagenes/icons8-tik-tok-48.png" alt=""></a>
+        <a class="link" href="#"><img class=" iconos2" src="./imagenes/icons8-tik-tok-50 black.png" alt=""></a>
       </div>
       <div>
-        <a class="link" href="#"> <img class=" iconos2" src="./imagenes/icons8-facebook-48.png" alt=""></a>
+        <a class="link" href="#"> <img class=" iconos2" src="./imagenes/icons8-facebook-50 black.png" alt=""></a>
       </div>
       <div>
-        <a class="link" href="#"><img class=" iconos2" src="./imagenes/icons8-youtube-play-48.png" alt=""></a>
+        <a class="link" href="#"><img class=" iconos2" src="./imagenes/icons8-youtube-play-50 black.png" alt=""></a>
       </div>
       </div>
     </div>
 
     <div class="divfooter col-lg-4">
-      <p class=" text-center">ENVIANOS TUS COMENTARIOS</p>
+      <p class=" mb-3 text-center titulos-footer">COMENTARIOS</p>
       <div class="mb-3">
         <label for="exampleFormControlInput21" class="form-label texto-label">NOMBRE</label>
         <input type="text" class="form-control" id="exampleFormControlInput21" placeholder="Nombre completo">
@@ -363,6 +410,7 @@
           
 
     <div class="divfooter col-lg-4">
+      <p class=" text-center titulos-footer">UBICACIÓN</p>
       <iframe class="w-100 rounded rounded-2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4400.61749400772!2d-58.79359358225364!3d-34.353920874961496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bb61b6066f6bc1%3A0xdc195365f6a5a98d!2sPablo%20Podesta%20451%2C%20B1625%20Bel%C3%A9n%20de%20Escobar%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1697767903353!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
       </iframe>
     </div>
