--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
           </nav>
           
           <div class=" cabecera  col-6 col-sm-4">
-            
             <div class="modal fade" id="exampleModalToggle1" aria-hidden="true" aria-labelledby="exampleModalToggleLabel1" tabindex="-1">
               <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
@@ -238,117 +237,86 @@
 
     <div class="imagen-fija-fondo">
       <h3 class="text-center pt-3">BENEFICIOS DE LOS TRATAMIENTOS FACIALES</h3>
-      <p class="text-center px-5 py-3 texto-img-fijas">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur a facere dolor reiciendis qui, minus amet ab facilis architecto natus officiis laudantium assumenda ut, ullam debitis, aspernatur sint dolore atque?
+      <p class="text-center px-4 py-3 texto-img-fijas">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur a facere dolor reiciendis qui, minus amet ab facilis architecto natus officiis laudantium assumenda ut, ullam debitis, aspernatur sint dolore atque?
         Consectetur repudiandae, dolore dolores quidem officiis ipsum deserunt asperiores debitis perspiciatis, labore cum. Non quam voluptatum aliquam aspernatur distinctio! Necessitatibus hic doloremque, ex id aspernatur amet excepturi natus. Hic, neque.
       </p>
     </div>
 
-  <div class="p-1 mb-5">
-  <div class="card mb-3 tarjeta1 border border-0" style="max-width: 750px;">
-    <div class="row g-0">
-      <div class="col-sm-4 d-flex  align-items-center">
-        <img src="./imagenes/istockphoto-968940310-1024x1024.jpg" class="img-fluid img-cartas rounded rounded-1" alt="...">
-      </div>
-      <div class="col-sm-8">
-        <div class="card-body">
-          <h5 class="card-title text-center">Card title</h5>
-          <p class="card-text">facere dolor reiciendis qui, minus amet ab facilis architecto natus officiis laudantium assumenda ut, ullam debitis, aspernatur sint dolore atque?
-            Consectetur repudiandae, dolore dolores quidem officiis ipsum deserunt asperiores debitis perspiciatis, labore cum. Non quam voluptatum aliquam aspernatur distinctio! Necessitatibus hic doloremque, ex id aspernatur amet excepturi natus. Hic, neque.</p>
-        </div>
-      </div>
-    </div>
+<div class="tarjetas-main px-5">
+  
+  <div class="tarjetas-centrales">
+  <div class="card my-3 text-center tarjeta1 borde border-0" style="width: 40rem;">
+    <img src="./imagenes/istockphoto-968940310-1024x1024.jpg" class="card-img-top" alt="...">
   </div>
-
-  <div class="card mb-3 tarjeta2 border border-0" style="max-width: 750px;">
-    <div class="row g-0">
-      <div class="col-sm-8">
-        <div class="card-body">
-          <h5 class="card-title text-center">Card title</h5>
-          <p class="card-text">facere dolor reiciendis qui, minus amet ab facilis architecto natus officiis laudantium assumenda ut, ullam debitis, aspernatur sint dolore atque?
-            Consectetur repudiandae, dolore dolores quidem officiis ipsum deserunt asperiores debitis perspiciatis, labore cum. Non quam voluptatum aliquam aspernatur distinctio! Necessitatibus hic doloremque, ex id aspernatur amet excepturi natus. Hic, neque.</p>
-        </div>
-      </div>
-      <div class="col-sm-4 d-flex  align-items-center">
-        <img src="./imagenes/istockphoto-968940310-1024x1024.jpg" class="img-fluid img-cartas rounded rounded-1" alt="...">
-      </div>
-    </div>
+  <div class="div-parrafos"><p class="text-center parrafos-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed repellendus reprehenderit dolore eos aperiam harum tempora quam molestiae quas ex cum modi voluptates, saepe unde provident dolor, ratione corporis quis? Nesciunt ex labore atque nam, eaque laudantium, esse quis, sapiente ipsam dolorum sequi minima nisi soluta eius. Laboriosam aperiam dolores temporibus amet suscipit explicabo consequuntur, cum quos autem reiciendis recusandae consectetur sapiente sit, officiis similique voluptatum mollitia enim obcaecati. Dolore.</p></div>
+</div>
+  
+<div class="tarjetas-centrales">
+  <div class="card my-3 text-center tarjeta2 borde border-0" style="width: 40rem;">
+    <img src="./imagenes/istockphoto-968940310-1024x1024.jpg" class="card-img-top" alt="...">
   </div>
-
-  <div class="card mb-3 tarjeta1 border border-0" style="max-width: 750px;">
-    <div class="row g-0">
-      <div class="col-sm-4 d-flex  align-items-center">
-        <img src="./imagenes/istockphoto-968940310-1024x1024.jpg" class="img-fluid img-cartas rounded rounded-1" alt="...">
-      </div>
-      <div class="col-sm-8">
-        <div class="card-body">
-          <h5 class="card-title text-center">Card title</h5>
-          <p class="card-text">facere dolor reiciendis qui, minus amet ab facilis architecto natus officiis laudantium assumenda ut, ullam debitis, aspernatur sint dolore atque?
-            Consectetur repudiandae, dolore dolores quidem officiis ipsum deserunt asperiores debitis perspiciatis, labore cum. Non quam voluptatum aliquam aspernatur distinctio! Necessitatibus hic doloremque, ex id aspernatur amet excepturi natus. Hic, neque.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="card mb-3 tarjeta2 border border-0" style="max-width: 750px;">
-    <div class="row g-0">
-      <div class="col-sm-8">
-        <div class="card-body">
-          <h5 class="card-title text-center">Card title</h5>
-          <p class="card-text">facere dolor reiciendis qui, minus amet ab facilis architecto natus officiis laudantium assumenda ut, ullam debitis, aspernatur sint dolore atque?
-            Consectetur repudiandae, dolore dolores quidem officiis ipsum deserunt asperiores debitis perspiciatis, labore cum. Non quam voluptatum aliquam aspernatur distinctio! Necessitatibus hic doloremque, ex id aspernatur amet excepturi natus. Hic, neque.</p>
-        </div>
-      </div>
-      <div class="col-sm-4 d-flex  align-items-center">
-        <img src="./imagenes/istockphoto-968940310-1024x1024.jpg" class="img-fluid img-cartas rounded rounded-1" alt="...">
-      </div>
-    </div>
-  </div>
+  <div class="div-parrafos"><p class="text-center parrafos-main">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora repellat maxime at illum eius quas saepe recusandae tempore atque quo? Numquam quasi nulla aut incidunt eum excepturi accusantium eius, dolorem accusamus debitis itaque ullam id nemo voluptas inventore molestiae eos iusto vel consectetur. Delectus quam corporis aut, ullam, neque, corrupti voluptate beatae laudantium alias nobis adipisci aliquid excepturi suscipit iure.</p></div>
 </div>
 
+<div class="tarjetas-centrales">
+  <div class="card my-3 text-center tarjeta1 borde border-0" style="width: 40rem;">
+    <img src="./imagenes/istockphoto-968940310-1024x1024.jpg" class="card-img-top" alt="...">
+  </div>
+  <div class="div-parrafos"><p class="text-center parrafos-main">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi necessitatibus iusto asperiores, illo maiores reiciendis nulla ea quidem placeat a optio quae, neque odio esse quaerat magni beatae natus mollitia! Consequuntur, quidem harum. Quam assumenda fuga non excepturi sequi. Velit deserunt obcaecati nisi a at consectetur quae nam rem ipsa omnis magnam consequatur impedit dolore earum natus ut, modi perspiciatis officia, in necessitatibus, nemo cum iusto dolorum deleniti! Voluptate, aspernatur numquam maiores maxime aliquam ex totam doloribus cum architecto consectetur.</p></div>
+</div>
+
+<div class="tarjetas-centrales">
+  <div class="card my-3 text-center tarjeta2 borde border-0" style="width: 40rem;">
+    <img src="./imagenes/istockphoto-968940310-1024x1024.jpg" class="card-img-top" alt="...">
+  </div>
+  <div class="div-parrafos"><p class="text-center parrafos-main">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum ullam vel, sequi voluptas facilis eligendi dolorum aliquid blanditiis nisi inventore nesciunt corporis odio molestiae, facere quo quod architecto excepturi cum?</p></div>
+</div>
+
+</div>
+
+  
 <div class="imagen-fija-fondo">
   <h3 class="text-center">TRATAMIENTOS</h3>
-  <p class="px-5 py-3 mb-0 texto-img-fijas">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident sed obcaecati laborum sit soluta dolor laboriosam aliquam, beatae cupiditate in adipisci ipsum dicta nisi perferendis velit aut commodi fuga repudiandae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptatibus consectetur voluptatem soluta nobis asperiores quasi laudantium voluptate dolore accusantium vitae itaque distinctio, repudiandae tenetur quis animi optio ipsa? Numquam!</p>
+  <p class="px-4 py-3 mb-0 texto-img-fijas">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident sed obcaecati laborum sit soluta dolor laboriosam aliquam, beatae cupiditate in adipisci ipsum dicta nisi perferendis velit aut commodi fuga repudiandae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptatibus consectetur voluptatem soluta nobis asperiores quasi laudantium voluptate dolore accusantium vitae itaque distinctio, repudiandae tenetur quis animi optio ipsa? Numquam!</p>
 </div>
 
-<div class="imagenes-main py-3">
+<div class="imagenes-main">
+  <div class="row text-center mx-0 px-0 d-flex justify-content-center align-items-center">
+    <div class="col-lg-4 p-0 img-main">
+      <a href="";><div class="img-main-tarjetas d-flex justify-content-center align-items-center"><p class="texto-tarjetas-main">AQUI VA EL TITULO DE LA IMAGEN</p></div></a>
+    </div>
 
-  <div class="row text-center mx-0">
-    <div class="col-lg-4">
-      <a href=""><img class="img-fluid img-main" src="./imagenes/istockphoto-968940310-1024x1024.jpg" alt=""></a>
+    <div class="col-lg-4 p-0 img-main">
+      <a href="";><div class="img-main-tarjetas d-flex justify-content-center align-items-center"><p class="texto-tarjetas-main">AQUI VA EL TITULO DE LA IMAGEN</p></div></a>
     </div>
-    <div class="col-lg-4">
-      <a href=""><img class="img-fluid img-main" src="./imagenes/istockphoto-968940310-1024x1024.jpg" alt=""></a>
+
+    <div class="col-lg-4 p-0 img-main">
+      <a href="";><div class="img-main-tarjetas d-flex justify-content-center align-items-center"><p class="texto-tarjetas-main">AQUI VA EL TITULO DE LA IMAGEN</p></div></a>
     </div>
-    <div class="col-lg-4">
-      <a href=""><img class="img-fluid img-main" src="./imagenes/istockphoto-968940310-1024x1024.jpg" alt=""></a>
+
+  <div class="row text-center mx-0 px-0 d-flex justify-content-center align-items-center">
+    <div class="col-lg-4 p-0 img-main">
+      <a href="";><div class="img-main-tarjetas d-flex justify-content-center align-items-center"><p class="texto-tarjetas-main">AQUI VA EL TITULO DE LA IMAGEN</p></div></a>
+    </div>
+    <div class="col-lg-4 p-0 img-main">
+      <a href="";><div class="img-main-tarjetas d-flex justify-content-center align-items-center"><p class="texto-tarjetas-main">AQUI VA EL TITULO DE LA IMAGEN</p></div></a>
+    </div>
+    <div class="col-lg-4 p-0 img-main">
+      <a href="";><div class="img-main-tarjetas d-flex justify-content-center align-items-center"><p class="texto-tarjetas-main">AQUI VA EL TITULO DE LA IMAGEN</p></div></a>
     </div>
   </div>
 
-  <div class="row text-center mx-0">
-    <div class="col-lg-4">
-      <a href=""><img class="img-fluid img-main" src="./imagenes/istockphoto-968940310-1024x1024.jpg" alt=""></a>
+  <div class="row text-center mx-0 px-0 d-flex justify-content-center align-items-center">
+    <div class="col-lg-4 p-0 img-main">
+      <a href="";><div class="img-main-tarjetas d-flex justify-content-center align-items-center"><p class="texto-tarjetas-main">AQUI VA EL TITULO DE LA IMAGEN</p></div></a>
     </div>
-    <div class="col-lg-4">
-      <a href=""><img class="img-fluid img-main" src="./imagenes/istockphoto-968940310-1024x1024.jpg" alt=""></a>
+    <div class="col-lg-4 p-0 img-main">
+      <a href="";><div class="img-main-tarjetas d-flex justify-content-center align-items-center"><p class="texto-tarjetas-main">AQUI VA EL TITULO DE LA IMAGEN</p></div></a>
     </div>
-    <div class="col-lg-4">
-      <a href=""><img class="img-fluid img-main" src="./imagenes/istockphoto-968940310-1024x1024.jpg" alt=""></a>
-    </div>
+    <div class="col-lg-4 p-0 img-main">
+      <a href="";><div class="img-main-tarjetas d-flex justify-content-center align-items-center"><p class="texto-tarjetas-main">AQUI VA EL TITULO DE LA IMAGEN</p></div></a>
   </div>
 
-  <div class="row text-center mx-0">
-    <div class="col-lg-4">
-      <a href=""><img class="img-fluid img-main" src="./imagenes/istockphoto-968940310-1024x1024.jpg" alt=""></a>
-    </div>
-    <div class="col-lg-4">
-      <a href=""><img class="img-fluid img-main" src="./imagenes/istockphoto-968940310-1024x1024.jpg" alt=""></a>
-    </div>
-    <div class="col-lg-4">
-      <a href=""><img class="img-fluid img-main" src="./imagenes/istockphoto-968940310-1024x1024.jpg" alt=""></a>
-    </div>
-  </div>
-
-</div>
 
 
 
