agregado de nosotros al main

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -251,18 +252,20 @@
 
   <main class="">
     <div class="imagen-fija-fondo">
-      <h3 class="text-center pt-3">BENEFICIOS DE LOS TRATAMIENTOS FACIALES</h3>
+      <h3 class="text-center pt-3">NOSOTROS</h3>
       <p class="text-center px-4 py-3 texto-img-fijas">Lorem ipsum dolor sit amet consectetur adipisicing elit.
         Consequuntur a facere dolor reiciendis qui, minus amet ab facilis architecto natus officiis laudantium assumenda
         ut, ullam debitis, aspernatur sint dolore atque?
         Consectetur repudiandae, dolore dolores quidem officiis ipsum deserunt asperiores debitis perspiciatis, labore
         cum. Non quam voluptatum aliquam aspernatur distinctio! Necessitatibus hic doloremque, ex id aspernatur amet
         excepturi natus. Hic, neque.
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur dolores amet totam dignissimos facere nam quia cum laboriosam? Quisquam recusandae doloremque quo nam, placeat error voluptate dolore vero at esse, ipsam aperiam numquam et repellendus officia dignissimos distinctio, perferendis necessitatibus. Nihil quas aspernatur repellendus molestiae, voluptate cumque quidem consequatur nam?
       </p>
     </div>
 
-    <div class="tarjetas-main px-5">
 
+    <div class="tarjetas-main px-5">
+      <h3 class="text-center">BENEFICIOS DE LOS TRATAMIENTOS FACIALES</h3>
       <div class="tarjetas-centrales">
         <div class="card my-3 text-center tarjeta1 borde border-0" style="width: 40rem;">
           <img src="./imagenes/istockphoto-968940310-1024x1024.jpg" class="card-img-top" alt="...">
@@ -319,15 +322,16 @@
 
 
     <div class="imagen-fija-fondo">
-      <h3 class="text-center">TRATAMIENTOS</h3>
+      <h3 class="text-center">TITULO</h3>
       <p class="px-4 py-3 mb-0 texto-img-fijas">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident sed
         obcaecati laborum sit soluta dolor laboriosam aliquam, beatae cupiditate in adipisci ipsum dicta nisi
         perferendis velit aut commodi fuga repudiandae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
         voluptatibus consectetur voluptatem soluta nobis asperiores quasi laudantium voluptate dolore accusantium vitae
-        itaque distinctio, repudiandae tenetur quis animi optio ipsa? Numquam!</p>
+        itaque distinctio, repudiandae tenetur quis animi optio ipsa? Numquam! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem, totam facere. Ab nam tempora assumenda ullam labore repellendus amet aut error totam commodi perferendis voluptatum, sapiente velit? Ut minima odit quibusdam! Voluptatem voluptatum eos at adipisci exercitationem aliquid quisquam aperiam!</p>
     </div>
-
+    
     <div class="imagenes-main">
+      <h3 class="text-center">TRATAMIENTOS</h3>
       <div class="row text-center mx-0 px-0 d-flex justify-content-center align-items-center">
         <div class="col-lg-4 p-0 img-main">
           <a href="" ;>
@@ -400,14 +404,9 @@
             </a>
           </div>
 
-
-
-
-
   </main>
 
   <footer class="d-flex row py-3">
-
     <div class="divfooter col-lg-4">
       <p class="mb-3 text-center titulos-footer">CONTACTOS</p>
       <div class="mb-4">
@@ -459,7 +458,6 @@
         <textarea class="form-control" id="exampleFormControlTextarea24" rows="3"></textarea>
       </div>
     </div>
-
 
     <div class="divfooter col-lg-4">
       <p class=" text-center titulos-footer">UBICACIÓN</p>
