--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 
   </main>
 
-  <footer class="d-flex row py-3">
+  <footer class="d-flex row p-0">
     <div class="divfooter col-lg-4">
       <p class="mb-3 text-center titulos-footer">CONTACTOS</p>
       <div class="mb-4">
@@ -467,9 +467,15 @@
         referrerpolicy="no-referrer-when-downgrade">
       </iframe>
     </div>
+
+    <div class="contenedor-logo-final">
+      <img class="img-logo-final" src="./imagenes/images.jpeg" alt="">
+    </div>
+
+    <div class="diseñado">
+      <p class="m-0">DISEÑADO POR: <b>SHESHANYS</b></p>
+    </div>
   </footer>
-
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
