--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
 </head>
 
 <body class="container-fluid p-0">
+  <!--Boton flotante de ws-->
   <a href="#" target="_blank" class="boton-flotante">
     <i class="fa-brands fa-whatsapp"></i>
   </a>
+  
+
+  <!--------- NAV ------------->
   <nav class="container-fluid row p-0 m-0">
-    <div class="redessociales d-flex justify-content-end">
+    <div class=" d-flex justify-content-end">
       <p class="tituloredes">SIGUENOS EN NUESTRAS REDES: &nbsp</p>
       <div class="iconos3">
         <div class="ms-2"><a href="#"><img class="iconos" src="./imagenes/icons8-instagram-50 black.png" alt=""></a>
@@ -233,7 +237,7 @@
         data-bs-toggle="modal">REGISTRATE</button>
     </div>
   </nav>
-
+<!--------  HEADER ------------->
   <header class="header1">
     <div class="contenido-header">
       <div class="header-flex">
@@ -249,8 +253,8 @@
       <H2 class="titulo2 m-0">TRATAMIENTOS FACIALES CON RESULTADOS REALES</H2>
     </div>
   </header>
-
-  <main class="">
+<!---------- MAIN -------------->
+  <main>
     <div class="imagen-fija-fondo">
       <h3 class="text-center pt-3">NOSOTROS</h3>
       <p class="text-center px-4 py-3 texto-img-fijas">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -403,9 +407,8 @@
               </div>
             </a>
           </div>
-
   </main>
-
+<!----------- FOOTER ------------>
   <footer class="d-flex row p-0">
     <div class="divfooter col-lg-4">
       <p class="mb-3 text-center titulos-footer">CONTACTOS</p>
