hoja home de registrados lista

--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse navbarlogo" id="navbarTogglerDemo01">
-          <div class="imagen-logo">
-            <img src="imagenes/images.jpeg" class=" img-logo" alt="">
-          </div>
+          <a href="">
+            <div class="imagen-logo">
+              <img src="imagenes/images.jpeg" class=" img-logo" alt="">
+            </div>
+          </a>
           <ul class="navbar-nav navbar4 container-fluid p-0">
             <li class="nav-item">
               <a class="nav-link active py-1" aria-current="page" href="#">HOME</a>
