--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="collapse navbar-collapse navbarlogo" id="navbarTogglerDemo01">
           <a href="">
             <div class="imagen-logo">
-              <img src="imagenes/images.jpeg" class=" img-logo" alt="">
+              <img src="imagenes/Nani-removebg-preview.png" class=" img-logo" alt="">
             </div>
           </a>
           <ul class="navbar-nav navbar4 container-fluid p-0">
@@ -244,7 +244,7 @@
     <div class="contenido-header">
       <div class="header-flex">
         <div class="img-fondo-header">
-          <img class="img-header-banner img-fluid" src="./imagenes/images.jpeg" alt="">
+          <img class="img-header-banner img-fluid" src="./imagenes/Nani-removebg-preview.png" alt="">
         </div>
         <div class="titulo1">
           <h1 class=" h1estetica">NANI ESTETICA</h1>
@@ -474,7 +474,7 @@
     </div>
 
     <div class="contenedor-logo-final">
-      <img class="img-logo-final" src="./imagenes/images.jpeg" alt="">
+      <img class="img-logo-final" src="./imagenes/Nani-removebg-preview.png" alt="">
     </div>
 
     <div class="diseñado">
