actualizacion tamaño logo

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <a class="nav-link py-1" href="#">PRODUCTOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link py-1" href="#">CONTACTOS</a>
+              <a class="nav-link py-1" href="./registrados/home.html">CONTACTOS</a>
             </li>
           </ul>
         </div>
@@ -252,7 +252,7 @@
       </div>
     </div>
     <div>
-      <H2 class="titulo2 m-0">TRATAMIENTOS FACIALES CON RESULTADOS REALES</H2>
+      <H2 class="titulo2 m-0">Tramientos faciales con resultados reales</H2>
     </div>
   </header>
 <!---------- MAIN -------------->
