correcion margentes logo menu

--- a/registrados/home.html
+++ b/registrados/home.html
@@ -28,7 +28,7 @@
       <div class="collapse navbar-collapse navbarlogo" id="navbarTogglerDemo01">
         <a href="">
           <div class="imagen-logo">
-            <img src="../imagenes/images.jpeg" class=" img-logo-nav" alt="">
+            <img src="../imagenes/Nani-removebg-preview.png" class=" img-logo-nav" alt="">
           </div>
         </a>
         <ul class="navbar-nav navbar4 container-fluid p-0">
