correcion del fondo home

--- a/registrados/home.html
+++ b/registrados/home.html
@@ -45,7 +45,7 @@
             <a class="nav-link  py-1" href="#">Mis consultas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link  py-1" href="#">Cerrar Sesion</a>
+            <a class="nav-link  py-1" href="../index.html">Cerrar Sesion</a>
           </li>
         </ul>
       </div>
@@ -53,7 +53,6 @@
   </nav>
 
   <main class="main-home">
-
 
     <div class="row container">
 
