creacion de las paginas dentro de registrados

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <link rel="stylesheet" href="./css/styles.css">
-  <title>Index</title>
+  <title>Home</title>
 </head>
 
 <body class="container-fluid p-0">
@@ -42,31 +42,31 @@
         </button>
         <div class="collapse navbar-collapse navbarlogo" id="navbarTogglerDemo01">
           <a href="">
-            <div class="imagen-logo">
+            <div class="imagen-logo alvaro">
               <img src="imagenes/Nani-removebg-preview.png" class=" img-logo" alt="">
             </div>
           </a>
           <ul class="navbar-nav navbar4 container-fluid p-0">
             <li class="nav-item">
-              <a class="nav-link active py-1" aria-current="page" href="#">HOME</a>
+             <a class="nav-link active py-1 ajuste-texto-menu" aria-current="page" href="#">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link py-1" href="#">NOSOTROS</a>
+              <a class="nav-link py-1 ajuste-texto-menu" href="#">NOSOTROS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link py-1" href="#">TRATAMIENTOS</a>
+              <a class="nav-link py-1 ajuste-texto-menu" href="#">TRATAMIENTOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link  py-1" href="#">RESULTADOS</a>
+              <a class="nav-link  py-1 ajuste-texto-menu" href="#">RESULTADOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link  py-1" href="#">TURNOS</a>
+              <a class="nav-link  py-1 ajuste-texto-menu" href="#">TURNOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link py-1" href="#">PRODUCTOS</a>
+              <a class="nav-link py-1 ajuste-texto-menu" href="#">PRODUCTOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link py-1" href="./registrados/home.html">CONTACTOS</a>
+              <a class="nav-link py-1 ajuste-texto-menu" href="./registrados/home.html">CONTACTOS</a>
             </li>
           </ul>
         </div>
