--- a/registrados/home.html
+++ b/registrados/home.html
@@ -27,25 +27,25 @@
       </button>
       <div class="collapse navbar-collapse navbarlogo" id="navbarTogglerDemo01">
         <a href="">
-          <div class="imagen-logo">
+          <div class="imagen-logo ajuste-texto-menu">
             <img src="../imagenes/Nani-removebg-preview.png" class=" img-logo-nav" alt="">
           </div>
         </a>
         <ul class="navbar-nav navbar4 container-fluid p-0">
           <li class="nav-item">
-            <a class="nav-link py-1" href="#">Mis Datos</a>
+            <a class="nav-link py-1 ajuste-texto-menu" href="#">Mis Datos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link py-1" href="#">Solicitar Turno</a>
+            <a class="nav-link py-1 ajuste-texto-menu" href="#">Solicitar Turno</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link  py-1" href="#">Mis Turnos</a>
+            <a class="nav-link  py-1 ajuste-texto-menu" href="#">Mis Turnos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link  py-1" href="#">Mis consultas</a>
+            <a class="nav-link  py-1 ajuste-texto-menu" href="#">Mis consultas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link  py-1" href="../index.html">Cerrar Sesion</a>
+            <a class="nav-link  py-1 ajuste-texto-menu" href="../index.html">Cerrar Sesion</a>
           </li>
         </ul>
       </div>
@@ -57,7 +57,7 @@
     <div class="row container">
 
       <div class="col-md-4  ft">
-        <a href="">
+        <a href="./misdatos.html">
           <div class="d-flex justify-content-center align-items-center">
             <img class="iconos" src="../imagenes/icons8-tarjeta-de-identificación-50.png" alt="">
             <p class="texto-tarjetas-main-home ms-1 hover">Mis datos</p>
@@ -66,7 +66,7 @@
       </div>
 
       <div class="col-md-4 ft ">
-        <a href="">
+        <a href="./solicitartuno.html">
           <div class="d-flex justify-content-center align-items-center">
             <img class="iconos" src="../imagenes/icons8-más-50.png" alt="">
             <p class="texto-tarjetas-main-home ms-1 hover">Solicitar turno</p>
@@ -75,7 +75,7 @@
       </div>
 
       <div class="col-md-4 ft">
-        <a href="">
+        <a href="./misturnos.html">
           <div class="d-flex justify-content-center align-items-center">
             <img class="iconos" src="../imagenes/icons8-calendario-50.png" alt="">
             <p class="texto-tarjetas-main-home ms-1 hover">Mis turnos</p>
@@ -84,7 +84,7 @@
       </div>
 
       <div class="col-md-4 ft">
-        <a  href="">
+        <a  href="./misconsultas.html">
           <div class="d-flex justify-content-center align-items-center">
           <img class="iconos" src="../imagenes/icons8-boleta-de-calificaciones-50.png" alt="">
           <p class="texto-tarjetas-main-home ms-1 hover">Mis consultas</p>
